feat: Implement reservation system, enhance customer signup, and fix related bugs

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-DB_HOST=121.124.127.244
-DB_USER=root
+DB_USER=new_user
 DB_PASSWORD=qmffor13@$
-DB_DATABASE=blackkingdom_db
+DB_DATABASE=blackkingdom
+DB_HOST=121.124.127.244
